# astraAPI

./: README.md  app.py  pyproject.toml  requirements.txt
templates/: admin.html  base.html  login.html
templates/admin/: dashboard.html  edit_key.html
